# orderbook_server

./: .gitignore  Cargo.toml  README.md  build.rs  cliff.toml
crates/archive/: README.md
crates/gateway/: README.md
crates/primitives/: Cargo.toml
crates/primitives/src/: event.rs  lib.rs  market.rs  matching_engine.rs  orderbook.rs  orders.rs  pair.rs  prices.rs
crates/primitives/src/account/: futures.rs  mod.rs  option.rs  spot.rs
crates/primitives/src/spot/: account.rs  event.rs  market.rs  matching_engine.rs  orderbook.rs  orders.rs  pair.rs  prices.rs  time_in_force.rs
crates/primitives/tests/: account.rs  l1.rs  l2.rs  l3.rs  matching_engine.rs  orderbook.rs  orders.rs  spot.rs
crates/primitives/tests/spot/: l1.rs  l2.rs  l3.rs  orderbook.rs
crates/primitives/tests/spot/orderbook/: mod.rs  order_placement.rs  snapshot.rs  trading.rs
crates/primitives/tests/spot/pair/: limit_order.rs  mod.rs  snapshot.rs
crates/runtime/: Cargo.toml  README.md  build.rs
crates/runtime/src/: lib.rs  main.rs  snapshot.rs
crates/spot_runtime/: Cargo.toml  README.md
crates/spot_runtime/src/: lib.rs  main.rs  snapshot.rs
crates/spot_runtime/src/jobs/: mod.rs
crates/spot_runtime/src/metrics/: mod.rs
proto/: gateway.proto
scripts/: README_REMOVE_TARGET.md  changelog.sh  fix_large_files.sh  remove_target_aggressive.sh  remove_target_bfg.sh  remove_target_from_history.sh
src/: lib.rs  main.rs  proto.rs  snapshot.rs
src/orderbook/: book.rs  mod.rs  order_storage.rs  order_storage_tests.rs  price_linked_list.rs
src/primitives/: mod.rs
src/primitives/L1/: mod.rs  test.rs
src/primitives/L2/: mod.rs  (+1 more)
src/snapshot/: README.md  mod.rs
src/types/: L1.rs  L3.rs
tests/: router_client.rs
(+6 files in other folders)
