[package]
name = "offgrid-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
once_cell = "1.21.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
thiserror = "1.0"
blake3 = "1.5"
ulid = { version = "1.1", features = ["serde"] }

[dev-dependencies]
postcard = { version = "1.0", features = ["alloc"] }
rust-rocksdb = "0.26"
tempfile = "3.12"

