[package]
name = "offgrid-spot-runtime"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
ctrlc = "3.4"
offgrid-primitives = { path = "../primitives" }
zmq = "0.10"
rust-rocksdb = "0.26"
prost = "0.13"
prost-types = "0.13"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
postcard = { version = "1.0", features = ["alloc"] }
prometheus = "0.13"

[dev-dependencies]
tempfile = "3.12"

[build-dependencies]
prost-build = "0.13"

